--- a/css/mescss/styles-typographies-couleurs.css
+++ b/css/mescss/styles-typographies-couleurs.css
@@ -249,3 +249,8 @@ p>cite {
     font-size: 2rem;
     text-align: center;
 }
+
+.contact label {
+    font-family: "Roboto Light", sans-serif;
+    line-height: 1.7rem;
+}
