Typographies et couleurs de autres-projets.html

--- a/css/mescss/styles-typographies-couleurs.css
+++ b/css/mescss/styles-typographies-couleurs.css
@@ -254,3 +254,9 @@ p>cite {
     font-family: "Roboto Light", sans-serif;
     line-height: 1.7rem;
 }
+
+.autres-projets span.name {
+    font-family: "Roboto Medium", sans-serif;
+    font-size: 1.6rem;
+    text-align: center;
+}
