--- a/css/mescss/styles-typographies-couleurs.css
+++ b/css/mescss/styles-typographies-couleurs.css
@@ -1,62 +1,4 @@
-@font-face {
-    font-family: "Bebas Neue";
-    src: url("../fonts/BebasNeue-Regular.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "Barlow Condensed Bold";
-    src: url("../fonts/BarlowCondensed-Bold.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "Barlow Condensed Italic";
-    src: url("../fonts/BarlowCondensed-Italic.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "Barlow Condensed Medium";
-    src: url("../fonts/BarlowCondensed-Medium.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "Barlow Condensed";
-    src: url("../fonts/BarlowCondensed-Regular.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "Roboto Bold";
-    src: url("../fonts/Roboto-Bold.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "Roboto Italic";
-    src: url("../fonts/Roboto-Italic.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "Roboto Bold Italic";
-    src: url("../fonts/Roboto-BoldItalic.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "Roboto Light";
-    src: url("../fonts/Roboto-Light.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "Roboto Light Italic";
-    src: url("../fonts/Roboto-LightItalic.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "Roboto Medium Italic";
-    src: url("../fonts/Roboto-MediumItalic.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "Roboto";
-    src: url("../fonts/Roboto-Regular.ttf") format("truetype");
-}
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,400;0,500;0,700;1,400&family=Bebas+Neue&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 html {
     font-size: 62.5%;
@@ -89,9 +31,9 @@ header>h1 {
 }
 
 h2 {
-    font-family: "Barlow Condensed Bold", sans-serif;
+    font-family: "Barlow Condensed", sans-serif;
     font-size: 2.8rem;
-    font-weight: normal;
+    font-weight: 700;
     line-height: 3.4rem;
     text-align: center;
     color: #6C3A57;
@@ -103,8 +45,9 @@ h2 span {
 }
 
 .nav-autres-pages h2 {
-    font-family: "Barlow Condensed Medium", sans-serif;
+    font-family: "Barlow Condensed", sans-serif;
     font-size: 2.4rem;
+    font-weight: 500;
     line-height: 2.9rem;
     color: black;
 }
@@ -145,21 +88,25 @@ strong {
 }
 
 span.bold {
-    font-family: "Roboto Bold", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
 }
 
 cite {
-    font-family: "Roboto Light Italic", sans-serif;
-    font-style: normal;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: italic;
 }
 
 cite.bold {
-    font-family: "Roboto Bold Italic", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
 }
 
 figcaption {
-    font-family: "Roboto Light", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 1.2rem;
+    font-weight: 300;
     text-align: center;
 }
 
@@ -176,12 +123,14 @@ figcaption {
 }
 
 #tweet\ article-1, #tweet\ article-2, #tweet\ article-3 {
-    font-family: "Roboto Light", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
 }
 
 .bouton {
     font-family: "Bebas Neue", cursive;
     font-size: 1.6rem;
+    font-weight: normal;
     text-decoration: none;
 }
 
@@ -196,8 +145,9 @@ address {
 }
 
 footer a, main p a, a[href="https://lejournal.cnrs.fr/billets/le-big-data-est-il-polluant"]>cite {
-    font-family: "Roboto Bold Italic", sans-serif;
-    font-style: normal;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: italic;
     text-decoration: underline;
     color: #693c80;
 }
@@ -208,19 +158,25 @@ footer a, main p a, a[href="https://lejournal.cnrs.fr/billets/le-big-data-est-il
 
 
 .chapeau, .chapeau cite {
-    font-family: "Roboto Medium Italic", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 1.6rem;
+    font-weight: 500;
+    font-style: italic;
 }
 
 .carrousel-items {
-    font-family: "Roboto Medium Italic", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: italic;
     list-style-type: none;
     text-align: center;
 }
 
 /*Remplacer par p>a ?*/
 p>cite {
-    font-family: "Roboto Italic", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: normal;
+    font-style: italic;
 }
 
 .accueil .bouton {
@@ -233,7 +189,9 @@ p>cite {
 }
 
 .citation {
-    font-family: "Barlow Condensed Italic", sans-serif;
+    font-family: "Barlow Condensed", sans-serif;
+    font-weight: normal;
+    font-style: italic;
     font-size: 2rem;
     line-height: 2.4rem;
 }
@@ -248,17 +206,22 @@ p>cite {
 
 #citation {
     font-family: "Barlow Condensed", sans-serif;
+    font-weight: normal;
     font-size: 2rem;
     text-align: center;
 }
 
 .contact label {
-    font-family: "Roboto Light", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
     line-height: 1.7rem;
 }
 
 .autres-projets span.name {
-    font-family: "Roboto Medium", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
     font-size: 1.6rem;
     text-align: center;
 }
+
+/*Régler le problème des strong*/
