Styles graphiques de a-propos.html

--- a/css/mescss/styles-graphiques.css
+++ b/css/mescss/styles-graphiques.css
@@ -24,7 +24,7 @@ html {
     background-color: #EBDE8B;
 }
 
-.article-1.partie-2, .article-2.partie-2, .article-3.partie-2, .article-3.partie-4 {
+.article-1.partie-2, .article-2.partie-2, .article-3.partie-2, .article-3.partie-4, .a-propos, .autres-projets  {
     background: #EDDAE2;
 }
 
@@ -35,4 +35,22 @@ html {
 
 .article-2.partie-2 figure:first-of-type>img {
     border: 3px solid #F2F2F2;
+}
+
+.a-propos>main>h2:first-of-type, .autres-projets h2 {
+    border-radius: 11px;
+    background: #f2f2f2;
+    border: 0.5px solid #fff;
+}
+
+.contact {
+    border-radius: 10px;
+    background: #f2f2f2;
+    border: 1px solid #fff;
+}
+
+.contact>form input, .contact>form textarea {
+    border-radius: 11px;
+    background: #fff;
+    border: none;
 }
