--- a/css/mescss/styles-graphiques.css
+++ b/css/mescss/styles-graphiques.css
@@ -40,7 +40,7 @@ html {
 .a-propos>main>h2:first-of-type, .autres-projets h2 {
     border-radius: 11px;
     background: #f2f2f2;
-    border: 0.5px solid #fff;
+    border: 1px solid #fff;
 }
 
 .contact {
@@ -53,4 +53,10 @@ html {
     border-radius: 11px;
     background: #fff;
     border: none;
+}
+
+.autres-projets .projets a {
+    border-radius: 11px;
+    background: #f2f2f2;
+    border: 1px solid #fff;
 }
