--- a/css/mescss/styles-graphiques.css
+++ b/css/mescss/styles-graphiques.css
@@ -60,3 +60,10 @@ html {
     background: #f2f2f2;
     border: 1px solid #fff;
 }
+
+body>header {
+    width: 375px;
+    height: 65px;
+    background: rgba(242, 242, 242, 0.9);
+    border: 1px solid rgba(255, 255, 255, 0.85);
+}
