Styles graphiques du footer

--- a/css/mescss/styles-graphiques.css
+++ b/css/mescss/styles-graphiques.css
@@ -67,3 +67,10 @@ body>header {
     background: rgba(242, 242, 242, 0.9);
     border: 1px solid rgba(255, 255, 255, 0.85);
 }
+
+footer {
+    width: 375px;
+    height: 111px;
+    background: rgba(242, 242, 242, 0.9);
+    border: 1px solid rgba(255, 255, 255, 0.85);
+}
