--- a/css/mescss/styles-mise-en-page.css
+++ b/css/mescss/styles-mise-en-page.css
@@ -66,7 +66,7 @@ article.article-1 figure>img, .article-2.partie-1 figure:first-of-type>img, .art
 }
 
 
-header {
+body>header {
     position: fixed;
     top: 0;
 }
