--- a/css/mescss/styles-graphiques.css
+++ b/css/mescss/styles-graphiques.css
@@ -33,9 +33,6 @@ html {
     background: #693C80;
 }
 
-#fleche-bas {
-    opacity: 0.85;
-}
 
 #nav-article-1 figure:first-of-type>img {
     border: 5px solid #F2F2F2;
@@ -70,15 +67,15 @@ html {
 }
 
 body>header {
-    width: 375px;
-    height: 65px;
+    width: 100%;
+    height: 8%;
     background: rgba(242, 242, 242, 0.9);
     border: 1px solid rgba(255, 255, 255, 0.85);
 }
 
 footer {
-    width: 375px;
-    height: 111px;
+    width: 100%;
+    height: 14%;
     background: rgba(242, 242, 242, 0.9);
     border: 1px solid rgba(255, 255, 255, 0.85);
 }
