--- a/css/mescss/styles-mise-en-page.css
+++ b/css/mescss/styles-mise-en-page.css
@@ -150,25 +150,36 @@ footer>address>p {
 }
 
 
-.article-1>header {
+.article-1>header, .article-2>header {
     margin-top: 9.5rem;
-    width: 95%;
     margin-left: auto;
     margin-right: auto;
 }
 
-.article-1 .chapeau {
-    margin-left: 1.7rem;
-    margin-right: 1.7rem;
-    margin-top: 4.5rem;
+.article-1>header {
+    width: 95%;
 }
 
-.article-1>figure>img {
+.article-2>header {
+    width: 60%;
+}
+
+.article-1 .chapeau, .article-2 .chapeau {
+    margin-left: 1.7rem;
+    margin-right: 1.7rem;
+    margin-top: 3.5rem;
+}
+
+.article-2 .chapeau:nth-of-type(2) {
+    margin-top: 2rem;
+}
+
+.article-1>figure>img, .article-2>figure>img {
     margin-top: 3rem;
     margin-bottom: 0.5rem;
 }
 
-.article-1 h3 {
+.article-1 h3, .article-2 h3 {
     margin-top: 3rem;
     margin-bottom: 2.5rem;
     padding-top: 0.3rem;
@@ -197,7 +208,9 @@ footer>address>p {
     margin-bottom: 0;
 }
 
-.article-1.partie-1>.carrousel+p, .article-1.partie-1>p:nth-last-of-type(2), .article-1.partie-2>p:last-of-type, .article-1.partie-3>p:last-of-type {
+.article-1.partie-1>.carrousel+p, .article-1.partie-1>p:nth-last-of-type(2), .article-1.partie-2>p:last-of-type,
+.article-1.partie-3>p:last-of-type, .article-scientifique>p:first-child, .article-2.partie-1 > p:nth-last-of-type(2),
+.article-2.partie-2>figure+p {
     margin-top: 3rem;
 }
 
@@ -205,17 +218,50 @@ footer>address>p {
     width: 70%;
 }
 
-.article-1.partie-2 {
+.article-2.partie-1>figure:last-of-type>figcaption {
+    width: 61%;
+}
+
+.article-1.partie-2, .article-2.partie-2 {
     padding-bottom: 2rem;
 }
 
-.article-1.partie-3>h3 {
+.article-1.partie-2>p:last-of-type, .article-2.partie-2>p:last-of-type {
+    margin-bottom: 1rem;
+}
+
+.article-1.partie-3>h3, .article-2.partie-3>h3 {
     margin-top: 0;
 }
 
-.article-1.partie-3 .bouton {
+.article-1.partie-3 .bouton, .article-2.partie-3 .bouton {
     margin-top: 2rem;
     margin-bottom: 3rem;
+}
+
+
+.citation {
+    display: block;
+    width: 86%;
+    margin: 4rem auto;
+}
+
+.citation:after, .citation::before {
+    display: none;
+}
+
+.article-2.partie-2>h3 {
+    height: 7%;
+    padding-top: 0.7rem;
+    padding-bottom: 0.7rem;
+}
+
+.article-2.partie-2 ul {
+    margin-top: 2rem;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+    padding: 0;
+
 }
 
 
