--- a/css/mescss/styles-mise-en-page.css
+++ b/css/mescss/styles-mise-en-page.css
@@ -480,8 +480,12 @@ address {
     margin-right: auto;
 }
 
-.nav-principale>li:nth-child(-n+5) {
-    margin-bottom: 6rem;
+.nav-principale>li:first-child:after, .nav-principale>li:nth-child(4):after, .nav-principale>li:nth-child(5):after {
+    content: url("../../img/ligne.png");
+    display: block;
+    width: 81%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .nav-principale>li:nth-child(2), .nav-principale>li:nth-child(3) {
