--- a/css/mescss/styles-graphiques.css
+++ b/css/mescss/styles-graphiques.css
@@ -16,7 +16,7 @@ html {
     border: 0.5px solid #000;
 }
 
-.carrousel-item>img {
+.carrousel-item {
     border: 3px solid #EBDE8B;
 }
 
@@ -67,17 +67,19 @@ html {
 }
 
 body>header {
+    display: flex;
+    align-items: center;
     width: 100%;
     height: 8%;
     background: rgba(242, 242, 242, 0.9);
-    border: 1px solid rgba(255, 255, 255, 0.85);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.85);
 }
 
 footer {
     width: 100%;
     height: 14%;
     background: rgba(242, 242, 242, 0.9);
-    border: 1px solid rgba(255, 255, 255, 0.85);
+    border-top: 1px solid rgba(255, 255, 255, 0.85);
 }
 
 .reseaux-sociaux li:nth-child(1)>a {
