--- a/css/mescss/menu.css
+++ b/css/mescss/menu.css
@@ -2,8 +2,7 @@
     width: 17px;
     height: 17px;
     position: absolute;
-    top: 25px;
-    left: 343px;
+    right: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -112,9 +111,25 @@ body ET html pour faire disparaître le scroll sur Safari IOS*/
     padding-inline-start: 0;
     line-height: 3.6rem;
     text-align: center;
+    width: 82%;
+    height: 58%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .nav-principale li:nth-child(2), .nav-principale li:nth-child(3), .nav-principale li:nth-child(4) {
     font-size: 2.6rem;
     line-height: 3.1rem;
+}
+
+.nav-principale>li:first-child:after, .nav-principale>li:nth-child(4):after, .nav-principale>li:nth-child(5):after {
+    content: url("../../img/ligne.png");
+    display: block;
+    width: 81%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.nav-principale>li:nth-child(2), .nav-principale>li:nth-child(3) {
+    margin-bottom: 3rem;
 }
