--- a/css/mescss/styles-mise-en-page.css
+++ b/css/mescss/styles-mise-en-page.css
@@ -17,6 +17,10 @@ img, figcaption {
     margin-right: auto;
 }
 
+.accueil>header>h1 {
+    margin-left: 1.5rem;
+}
+
 
 /*REVOIR LES SELECTEURS*/
 article.article-1 figure>img, .article-2.partie-1 figure:first-of-type>img, .article-3 figure>img, .accueil figure>img {
@@ -250,7 +254,6 @@ article h3 {
     padding-top: 0.3rem;
     padding-bottom: 0.3rem;
     padding-left: 1rem;
-    width: 100%;
     height: 4%;
 }
 
@@ -471,24 +474,5 @@ form#contact textarea {
 
 address {
     display: inline-block;
-}
-
-.nav-principale {
-    width: 82%;
-    height: 58%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.nav-principale>li:first-child:after, .nav-principale>li:nth-child(4):after, .nav-principale>li:nth-child(5):after {
-    content: url("../../img/ligne.png");
-    display: block;
-    width: 81%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.nav-principale>li:nth-child(2), .nav-principale>li:nth-child(3) {
-    margin-bottom: 3rem;
 }
 
