--- a/css/mescss/styles-typographies-couleurs.css
+++ b/css/mescss/styles-typographies-couleurs.css
@@ -11,7 +11,6 @@ body {
     font-style: normal;
     line-height: 1.9rem;
     color: black;
-
     margin: 0;
     padding: 0;
 }
@@ -87,7 +86,7 @@ a {
 }
 
 strong {
-    font-weight: normal;
+    font-weight: unset;
 }
 
 span.bold {
@@ -175,7 +174,6 @@ footer a, main p a, a[href="https://lejournal.cnrs.fr/billets/le-big-data-est-il
     text-align: center;
 }
 
-/*Remplacer par p>a ?*/
 p>cite {
     font-family: "Roboto", sans-serif;
     font-weight: normal;
@@ -226,5 +224,3 @@ p>cite {
     font-size: 1.6rem;
     text-align: center;
 }
-
-/*Régler le problème des strong*/
