--- a/css/mescss/menu.css
+++ b/css/mescss/menu.css
@@ -123,7 +123,7 @@ body ET html pour faire disparaître le scroll sur Safari IOS*/
 }
 
 .nav-principale>li:first-child:after, .nav-principale>li:nth-child(4):after, .nav-principale>li:nth-child(5):after {
-    content: url("../../img/ligne.png");
+    content: url("../../img/ligne-menu.png");
     display: block;
     line-height: 0;
     width: 81%;
